Messenger page finished.

--- a/apps/messenger.html
+++ b/apps/messenger.html
@@ -55,11 +55,81 @@
 
           <!--Different section explanations that are displayed when the user clicks the corresponding coordinates on the image map. Some sections contain images for extra details or links to the Google help page if necessary.-->
 
-          <div class="areaDescription" id="...">
-            <h3></h3>
+          <div class="areaDescription" id="mAccount">
+            <h3>Account.</h3>
             <hr>
-            <p class="aboutFunction"></p>
-            <img src="..." class="descriptionImage" alt="...">
+            <p class="aboutFunction">Clicking your profile picture in the top left corner, will bring you to a page with everything realted to your profile. Descriptions of different options are listed below:</p>
+            <p class="aboutFunction"><b>Message Requests:  </b>These include messages people have tried to send you. Messenger categorises these messages into two groups those from people you may know and the ones they think maybe spam. You can navigate between these messages by clicking the two headers displayed in the image below.</p>
+            <img src="/images/mRequests.jpg" class="descriptionImage" alt="Messenger Requests">
+            <p class="aboutFunction"><b>Archived Chats:  </b>These are chats that you have left. You are able to unarchive/delete them by holding down the message, this should bring up the two options where you can click your desired option.</p>
+            <p class="aboutFunction"><b>Profile:  </b>There are two buttons under the the profile header. The first allows you to turn off your status, this means your friends/contacts won't be able to see if your online. The second allows you to change your username.</p>
+            <p class="aboutFunction"><b>Preferences:  </b>There multiple functions under this header, they allow you to change how Messenger works. The main ones are descibed below:</p>
+            <p class="aboutFunction">Privacy -   Allows you to customise how private your Messenger account is. You can change whether a new message appears in your inbox or in the request tab and check on blocked accounts.</p>
+            <p class="aboutFunction">Notifications & Sounds -   This changes what notifications and what type of notification you get from Messenger.</p>
+            <p class="aboutFunction">Phone Contacts -   Allows you to upload contacts from your phone.</p>
+            <p class="aboutFunction"><b>Account:  </b>This is basically just settings and if you need any help. It contains page for you to report technical problems, and a page for help.</p>  
+            <br>
+          </div>
+
+          <div class="areaDescription" id="mCamera">
+            <h3>Camera.</h3>
+            <hr>
+            <p class="aboutFunction">Taking a photo allows you to send it to either your story or to a desired person/group. When you open the camera you can choose to take a photo or video by either clicking the circle button(for a photo) or holding down the circle button(for a video). After you take the photo you have multiple options to customise your photo/video, including stickers, drawing and text.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="mNewMessage">
+            <h3>New Message.</h3>
+            <hr>
+            <p class="aboutFunction">The button in the top right corner allows you to create a new message. The image below is what comes up when you click the new message button.</p>
+            <img src="/images/mNewMessage.png" class="descriptionImage" alt="New Message">
+            <p class="aboutFunction">If you want to search for a person to message, using the search bar at the top that appears after clicking new message will allow you to do so. You will have to search by their Facebook name in order to find them. Clicking "Create a New Group" allows you to choose which recipents you would like in a group.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="mSearch">
+            <h3>Search.</h3>
+            <hr>
+            <p class="aboutFunction">The search bar at the top allows you to search through your messages. This is helpful if you have a long page of messages, but your looking for a person.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="mCreateRoom">
+            <h3>Create Room.</h3>
+            <hr>
+            <p class="aboutFunction">Create a room is the same as a video call. It allows you to facetime your friends/contacts. When you click Create Room you are given the option to choose who you would like to invite to the call.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="mMessage">
+            <h3>Message.</h3>
+            <hr>
+            <p class="aboutFunction">This is the message itself, if the beginning of it says "You:" this means you were the one that sent the message, if not the message was sent to you. The images below are the difference between unread and read messages:</p>
+            <p class="aboutFunction"><b>Unread.</b></p>
+            <img src="/images/mUnread.png" class="descriptionImage" alt="Unread Message">
+            <p class="aboutFunction"><b>Read.</b></p>
+            <img src="/images/mRead.png" class="descriptionImage" alt="Read Message">
+            <hr>
+            <br>
+            <p class="aboutFunction">When you click the message you are brought to the chat with that person/group. The following images are buttons you can find on this page:</p>
+            <img src="/images/mChatTopButtons.png" class="descriptionImage" alt="Top buttons in chat">
+            <p class="aboutFunction">The buttons above are found at the top of your chat. There are a total of five different function here. The first is the go back button, which takes you back all your chats. Second is the person/group you are messaging, below it is the last time they were active. Next is the phone and the video chat button, both will call your chat the first one just with voice and the second with your voice plus camera. The last is an information button, this looks like a lowercase "i" in a circle, this gives you more information of the chat and the person(s) in it.</p>
+            <img src="/images/mChatBottomButtons.jpg" class="descriptionImage" alt="Bottom buttons in chat">
+            <p class="aboutFunction">These buttons are found at the bottom of your screen, they revolve around the messages you send to the chat. Starting from the left; the four dots allow you to see more options, including "Location" and "Create Room". Next is the camera which allows you to send photos to your friend. The next button is pretty similar to the previous one, however instead of the camera being opened you can choose photos from your gallery. The microphone is to make voice memos to send, this means you can record your voice and send it as a message rather than typing it. The last button is a thumbs up, which allows you to like your friends previous message.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="mChats">
+            <h3>Chats.</h3>
+            <hr>
+            <p class="aboutFunction">There are two tabs down the bottom, the "Chats" one or the "People" one. When you open Messenger, whether it be from your home screen or from Facebook it will always open the "Chats" tab. The point of this button is to allow you to return to your chats after your on the peoples tab.</p>
+            <br>
+          </div>
+
+          <div class="areaDescription" id="mPeople">
+            <h3>People.</h3>
+            <hr>
+            <p class="aboutFunction">There are two tabs down the bottom, the "Chats" one or the "People" one. The peoples tab allows you to see what friends are active and any stories that have been posted. The number that appears on top is the number of active friends.</p>
             <br>
           </div>
 
@@ -72,14 +142,14 @@
       <!--Image map made on "https://www.image-map.net/"-->
       <!--Each area is a different button on the home page, which is why the coords differ. The "data-target" links the area to its description and the "onclick" gets rid of the text that is dispalyed in the beginning when an area is clicked.-->
       <map name="image-map">
-        <area target="" alt="Account" title="Account" href="javascript:void(0)" coords="19,22,167,150" shape="rect">
-        <area target="" alt="Camera" title="Camera" href="javascript:void(0)" coords="789,24,919,148" shape="rect">
-        <area target="" alt="New Message" title="New Message" href="javascript:void(0)" coords="930,24,1054,151" shape="rect">
-        <area target="" alt="Search" title="Search" href="javascript:void(0)" coords="19,176,1054,290" shape="rect">
-        <area target="" alt="Create Room" title="Create Room" href="javascript:void(0)" coords="22,323,201,568" shape="rect">
-        <area target="" alt="Message" title="Message" href="javascript:void(0)" coords="24,593,827,775" shape="rect">
-        <area target="" alt="Chats" title="Chats" href="javascript:void(0)" coords="5,1992,503,2125" shape="rect">
-        <area target="" alt="People" title="People" href="javascript:void(0)" coords="514,1992,1072,2124" shape="rect">
+        <area alt="Account" title="Account" href="javascript:void(0)" coords="19,22,167,150" shape="rect" class="imageMapCoords" data-target="mAccount" onclick="beginningText()" />
+        <area alt="Camera" title="Camera" href="javascript:void(0)" coords="789,24,919,148" shape="rect" class="imageMapCoords" data-target="mCamera" onclick="beginningText()" />
+        <area alt="New Message" title="New Message" href="javascript:void(0)" coords="930,24,1054,151" shape="rect" class="imageMapCoords" data-target="mNewMessage" onclick="beginningText()" />
+        <area alt="Search" title="Search" href="javascript:void(0)" coords="19,176,1054,290" shape="rect" class="imageMapCoords" data-target="mSearch" onclick="beginningText()" />
+        <area alt="Create Room" title="Create Room" href="javascript:void(0)" coords="22,323,201,568" shape="rect" class="imageMapCoords" data-target="mCreateRoom" onclick="beginningText()" />
+        <area alt="Message" title="Message" href="javascript:void(0)" coords="24,593,827,775" shape="rect" class="imageMapCoords" data-target="mMessage" onclick="beginningText()" />
+        <area alt="Chats" title="Chats" href="javascript:void(0)" coords="5,1992,503,2125" shape="rect" class="imageMapCoords" data-target="mChats" onclick="beginningText()" />
+        <area alt="People" title="People" href="javascript:void(0)" coords="514,1992,1072,2124" shape="rect" class="imageMapCoords" data-target="mPeople" onclick="beginningText()" />
       </map>
 
 
@@ -117,9 +187,71 @@
         <div class="insideBox">
 
           <!--Each section are now in an accordion. The information about each part will be displayed when the header is clicked. These parts have the EXACT SAME information as the descriptions above.-->
+          <button class="accordion">Account</button>
+          <div class="section">
+            <p class="aboutFunction">Clicking your profile picture in the top left corner, will bring you to a page with everything realted to your profile. Descriptions of different options are listed below:</p>
+            <p class="aboutFunction"><b>Message Requests:  </b>These include messages people have tried to send you. Messenger categorises these messages into two groups those from people you may know and the ones they think maybe spam. You can navigate between these messages by clicking the two headers displayed in the image below.</p>
+            <img src="/images/mRequests.jpg" class="descriptionImage" alt="Messenger Requests">
+            <p class="aboutFunction"><b>Archived Chats:  </b>These are chats that you have left. You are able to unarchive/delete them by holding down the message, this should bring up the two options where you can click your desired option.</p>
+            <p class="aboutFunction"><b>Profile:  </b>There are two buttons under the the profile header. The first allows you to turn off your status, this means your friends/contacts won't be able to see if your online. The second allows you to change your username.</p>
+            <p class="aboutFunction"><b>Preferences:  </b>There multiple functions under this header, they allow you to change how Messenger works. The main ones are descibed below:</p>
+            <p class="aboutFunction">Privacy -   Allows you to customise how private your Messenger account is. You can change whether a new message appears in your inbox or in the request tab and check on blocked accounts.</p>
+            <p class="aboutFunction">Notifications & Sounds -   This changes what notifications and what type of notification you get from Messenger.</p>
+            <p class="aboutFunction">Phone Contacts -   Allows you to upload contacts from your phone.</p>
+            <p class="aboutFunction"><b>Account:  </b>This is basically just settings and if you need any help. It contains page for you to report technical problems, and a page for help.</p> 
+            <br>
+          </div>
+
+          <button class="accordion">Camera</button>
+          <div class="section">
+            <p class="aboutFunction">Located at the top right corner, and looks like a camera. Taking a photo allows you to send it to either your story or to a desired person/group. When you open the camera you can choose to take a photo or video by either clicking the circle button(for a photo) or holding down the circle button(for a video). After you take the photo you have multiple options to customise your photo/video, including stickers, drawing and text.</p>
+            <br>
+          </div>
+
+          <button class="accordion">New Message</button>
+          <div class="section">
+            <p class="aboutFunction">The button in the top right corner allows you to create a new message. If you want to search for a person to message, using the search bar at the top that appears after clicking new message will allow you to do so. You will have to search by their Facebook name in order to find them. Clicking "Create a New Group" allows you to choose which recipents you would like in a group.</p>
+            <br>
+          </div>
+
           <button class="accordion"></button>
           <div class="section">
-            
+            <p class="aboutFunction">The search bar at the top allows you to search through your messages. This is helpful if you have a long page of messages, but your looking for a person.</p>
+            <br>
+          </div>
+
+          <button class="accordion">Create Room</button>
+          <div class="section">
+            <p class="aboutFunction">Create a room is the same as a video call. It allows you to facetime your friends/contacts. When you click Create Room you are given the option to choose who you would like to invite to the call.</p>
+            <br>
+          </div>
+
+          <button class="accordion">Message</button>
+          <div class="section">
+            <p class="aboutFunction">This is the message itself, if the beginning of it says "You:" this means you were the one that sent the message, if not the message was sent to you. The images below are the difference between unread and read messages:</p>
+            <p class="aboutFunction"><b>Unread.</b></p>
+            <img src="/images/mUnread.png" class="descriptionImage" alt="Unread Message">
+            <p class="aboutFunction"><b>Read.</b></p>
+            <img src="/images/mRead.png" class="descriptionImage" alt="Read Message">
+            <hr>
+            <br>
+            <p class="aboutFunction">When you click the message you are brought to the chat with that person/group. The following images are buttons you can find on this page:</p>
+            <img src="/images/mChatTopButtons.png" class="descriptionImage" alt="Top buttons in chat">
+            <p class="aboutFunction">The buttons above are found at the top of your chat. There are a total of five different function here. The first is the go back button, which takes you back all your chats. Second is the person/group you are messaging, below it is the last time they were active. Next is the phone and the video chat button, both will call your chat the first one just with voice and the second with your voice plus camera. The last is an information button, this looks like a lowercase "i" in a circle, this gives you more information of the chat and the person(s) in it.</p>
+            <img src="/images/mChatBottomButtons.jpg" class="descriptionImage" alt="Bottom buttons in chat">
+            <p class="aboutFunction">These buttons are found at the bottom of your screen, they revolve around the messages you send to the chat. Starting from the left; the four dots allow you to see more options, including "Location" and "Create Room". Next is the camera which allows you to send photos to your friend. The next button is pretty similar to the previous one, however instead of the camera being opened you can choose photos from your gallery. The microphone is to make voice memos to send, this means you can record your voice and send it as a message rather than typing it. The last button is a thumbs up, which allows you to like your friends previous message.</p>
+            <br>
+          </div>
+
+          <button class="accordion">Chats</button>
+          <div class="section">
+            <p class="aboutFunction">There are two tabs down the bottom, the "Chats" one or the "People" one. When you open Messenger, whether it be from your home screen or from Facebook it will always open the "Chats" tab. The point of this button is to allow you to return to your chats after your on the peoples tab.</p>
+            <br>
+          </div>
+
+          <button class="accordion">People</button>
+          <div class="section">
+            <p class="aboutFunction">There are two tabs down the bottom, the "Chats" one or the "People" one. The peoples tab allows you to see what friends are active and any stories that have been posted. The number that appears on top is the number of active friends.</p>
             <br>
           </div>
 
